# voiced

./: CLAUDE.md  CONTEXT.md  README.md  flake.nix  pyproject.toml
src/sttd/: __init__.py  audio.py  cli.py  client.py  config.py  daemon.py  dbusmenu.py  diarizer.py  http_client.py  http_server.py  injector.py  local_agreement.py  profiles.py  recorder.py  remote_daemon.py  server.py  transcriber.py  tray.py
src/voiced/: __init__.py  __main__.py  audio.py  audio_codec.py  capabilities.py  cli.py  client.py  config.py  daemon.py  dbusmenu.py  device.py  diarizer.py  http_client.py  http_server.py  model_host.py  profile_store.py  profiles.py  recorder.py  recording_session.py  remote_daemon.py  server.py  speaker_segments.py  synthesizer.py  transcribe.py  transcriber.py  tray.py  tts_streamer.py  voice_manager.py  webrtc_client.py  webrtc_server.py  worker.py  worker_host.py
tests/: __init__.py  test_audio_codec.py  test_capabilities.py  test_cli.py  test_config.py  test_device.py  test_imports.py  test_local_agreement.py  test_model_host.py  test_parent_imports.py  test_profile_store.py  test_recording_session.py  test_roundtrip.py  test_synthesizer.py  test_transcribe_adapter.py  test_transcriber.py  test_vibevoice_tts.py  test_worker_host.py
