[project]
name = "voiced"
version = "0.2.0"
description = "Voice daemon - Speech-to-Text and Text-to-Speech for Linux/Wayland"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "sdelcore" }]
keywords = ["speech-to-text", "text-to-speech", "whisper", "tts", "stt", "transcription", "speaker-identification", "faster-whisper", "vibevoice", "daemon", "wayland"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Typing :: Typed",
]

dependencies = [
    # STT dependencies
    "faster-whisper>=1.0.0",
    "speechbrain>=1.0.0,<1.1.0",
    # TTS dependencies (VibeVoice installed separately)
    "tqdm>=4.65.0",
    # WebRTC for real-time audio streaming
    "aiortc>=1.6.0",
    # Shared dependencies
    "sounddevice>=0.4.6",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "click>=8.1.0",
    "requests>=2.28.0",
    "huggingface_hub>=0.20.0,<1.0.0",
    # Linux/Wayland integration
    "dasbus>=1.7",
    "Pillow>=10.0.0",
    "PyGObject>=3.42.0",
    # Speaker identification
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
voiced = "voiced.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voiced"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
