[project]
name = "voiced"
version = "0.5.0"
description = "Voice daemon - Speech-to-Text and Text-to-Speech for Linux/Wayland"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "sdelcore" }]
keywords = ["speech-to-text", "text-to-speech", "parakeet", "nemo", "tts", "stt", "transcription", "speaker-identification", "kokoro", "daemon", "wayland"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Typing :: Typed",
]

dependencies = [
    # STT (NVIDIA Parakeet-TDT via NeMo)
    "nemo_toolkit[asr]>=2.4",
    # Match the host driver (CUDA 12.8 on nightman). Default PyPI ships
    # torch built against CUDA 13, which won't init on a 570.x driver.
    # Override via [tool.uv.sources] below; pin all three together so
    # uv doesn't keep a cached cu130 torchaudio with a cu128 torch.
    "torch==2.9.1",
    "torchaudio==2.9.1",
    "speechbrain>=1.0.0,<1.1.0",
    # TTS (Kokoro-82M; needs espeak-ng at runtime for g2p fallback)
    "kokoro>=0.9.4",
    # Not a direct dep (nemo -> resampy -> numba). Without a floor, a fresh
    # unlocked resolve picks the newest numpy and backtracks numba to 0.53,
    # whose unbounded metadata "accepts" it but can't build on Python 3.12.
    "numba>=0.60",
    # WebRTC for real-time audio streaming
    "aiortc>=1.6.0",
    # Shared dependencies
    "sounddevice>=0.4.6",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "click>=8.1.0",
    "requests>=2.28.0",
    "huggingface_hub>=0.20.0,<1.0.0",
    # Linux/Wayland integration
    "dasbus>=1.7",
    "Pillow>=10.0.0",
    # PyGObject provided by nix pythonEnv (avoid pycairo rebuild)
    # Speaker identification
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
voiced = "voiced.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voiced"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not integration'"
markers = [
    "integration: end-to-end test that downloads models and runs them on real audio (slow, GPU-heavy; opt in with `pytest -m integration`)",
]
